# BigEarthNet_Big_Data

./: .gitignore  README.md  gitignore.txt  pyproject.toml
pyspark_big_earth_net.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
